--- a/index.html
+++ b/index.html
@@ -11,23 +11,30 @@
             box-sizing: border-box;
         }
         body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            color: #fff;
+            font-family: 'Arial', sans-serif;
+            background-color: #121212;
+            color: #f3f3f3;
             line-height: 1.6;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
         }
         header {
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 20px 50px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(0, 0, 0, 0.1);
+            transition: background-color 0.3s ease;
         }
         header .logo {
-            font-size: 1.8em;
+            font-size: 2em;
             font-weight: bold;
-            letter-spacing: 1px;
             color: #00D1FF;
+            letter-spacing: 1px;
+            transition: transform 0.3s ease;
+        }
+        header .logo:hover {
+            transform: scale(1.1);
         }
         header nav ul {
             display: flex;
@@ -38,26 +45,78 @@
         }
         header nav ul li a {
             text-decoration: none;
-            color: #fff;
-            transition: color 0.3s;
+            color: #f3f3f3;
+            font-size: 1.1em;
+            transition: color 0.3s ease, transform 0.3s ease;
         }
         header nav ul li a:hover {
             color: #00D1FF;
+            transform: translateY(-5px);
         }
+        .hamburger {
+            display: none;
+            cursor: pointer;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 30px;
+            width: 30px;
+            background: transparent;
+            border: none;
+            padding: 0;
+        }
+        .hamburger div {
+            width: 30px;
+            height: 4px;
+            background-color: #fff;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+        }
+        .mobile-nav {
+            display: none;
+            flex-direction: column;
+            background-color: rgba(0, 0, 0, 0.9);
+            position: absolute;
+            top: 80px;
+            right: 0;
+            width: 100%;
+            padding: 20px;
+            text-align: center;
+        }
+        .mobile-nav ul {
+            list-style: none;
+        }
+        .mobile-nav ul li {
+            margin: 20px 0;
+        }
+        .mobile-nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+        .mobile-nav ul li a:hover {
+            color: #00D1FF;
+        }
+
+        /* Hero Section */
         .hero {
             text-align: center;
-            padding: 100px 20px;
-            background: linear-gradient(180deg, rgba(0,0,0,1) 60%, rgba(0,209,255,0.2));
+            padding: 120px 20px;
+            background: linear-gradient(180deg, rgba(0, 0, 0, 0.8) 60%, rgba(0, 209, 255, 0.2));
+            position: relative;
         }
         .hero h1 {
-            font-size: 3.5em;
+            font-size: 3.8em;
             margin-bottom: 20px;
             color: #00D1FF;
+            animation: fadeIn 1.5s ease-out;
         }
         .hero p {
             font-size: 1.2em;
-            max-width: 600px;
+            max-width: 700px;
             margin: 0 auto 30px;
+            color: #ddd;
+            animation: fadeIn 2s ease-out;
         }
         .hero .cta {
             display: inline-block;
@@ -66,81 +125,107 @@
             color: #000;
             text-transform: uppercase;
             font-weight: bold;
-            border: none;
             border-radius: 5px;
             text-decoration: none;
             cursor: pointer;
-            transition: background 0.3s;
+            transition: background 0.3s, transform 0.3s ease;
         }
         .hero .cta:hover {
             background: #009FCC;
+            transform: scale(1.1);
         }
-        .features {
-            display: flex;
-            justify-content: space-around;
-            padding: 50px;
+
+        /* Accordion FAQ Section */
+        .faq-section {
+            background-color: #1a1a1a;
+            padding: 50px 20px;
+        }
+        .faq-section h2 {
             text-align: center;
-        }
-        .features .feature {
-            max-width: 300px;
-        }
-        .features .feature h3 {
-            font-size: 1.5em;
-            margin-bottom: 15px;
-            color: #00D1FF;
-        }
-        .features .feature p {
-            font-size: 1em;
-            color: #ccc;
-        }
-        .contact-page {
-            padding: 50px;
-            text-align: center;
-        }
-        .contact-page h2 {
+            margin-bottom: 40px;
             font-size: 2.5em;
-            margin-bottom: 30px;
             color: #00D1FF;
         }
-        .contact-page .contact {
-            display: flex;
-            justify-content: space-evenly;
-            align-items: flex-start;
-            flex-wrap: wrap;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .contact-page .contact-card {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 10px;
-            padding: 20px;
-            width: 300px;
-            text-align: center;
-        }
-        .contact-page .contact-card h3 {
-            font-size: 1.5em;
+        .faq-section .faq-item {
+            background-color: #121212;
             margin-bottom: 10px;
-            color: #00D1FF;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+            transition: all 0.3s ease;
         }
-        .contact-page .contact-card p {
-            font-size: 1em;
+        .faq-section .faq-item:hover {
+            background-color: #00D1FF;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
+        }
+        .faq-section .faq-item .question {
+            font-size: 1.5em;
+            color: #fff;
+            cursor: pointer;
+        }
+        .faq-section .faq-item .answer {
+            display: none;
+            margin-top: 10px;
+            font-size: 1.1em;
             color: #ccc;
         }
+
+        /* Footer */
         footer {
             text-align: center;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.05);
+            background: rgba(0, 0, 0, 0.8);
             color: #ccc;
             font-size: 0.9em;
         }
         footer a {
             color: #00D1FF;
             text-decoration: none;
-            transition: color 0.3s;
+            transition: color 0.3s ease;
         }
         footer a:hover {
             color: #009FCC;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header nav ul {
+                display: none;
+            }
+            header .hamburger {
+                display: flex;
+            }
+            .mobile-nav {
+                display: none;
+            }
+            .mobile-nav.open {
+                display: flex;
+            }
+            .mobile-nav ul li a {
+                font-size: 1.2em;
+                padding: 10px 0;
+            }
+            .hero h1 {
+                font-size: 2.8em;
+            }
+            .faq-section .faq-item {
+                font-size: 1.1em;
+            }
+            .features {
+                flex-direction: column;
+                align-items: center;
+                padding: 30px 20px;
+            }
+            .features .feature {
+                margin-bottom: 30px;
+                max-width: 90%;
+            }
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
     </style>
 </head>
@@ -149,58 +234,71 @@
         <div class="logo">PlatAI</div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#solutions">Solutions</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Solutions</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
+        <div class="hamburger" id="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </header>
 
-    <section class="hero" id="home">
+    <div class="mobile-nav" id="mobile-nav">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Solutions</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+
+    <section class="hero">
         <h1>Empowering Businesses with AI</h1>
         <p>Discover cutting-edge AI solutions that drive innovation, efficiency, and growth for your business. Let's shape the future together.</p>
         <a href="#" class="cta">Get Started</a>
     </section>
 
-    <section class="features" id="solutions">
-        <div class="feature">
-            <h3>Custom AI Solutions</h3>
-            <p>Tailored AI strategies and tools designed to meet the unique needs of your business.</p>
+    <section class="faq-section">
+        <h2>Frequently Asked Questions</h2>
+        <div class="faq-item">
+            <div class="question">What is PlatAI?</div>
+            <div class="answer">PlatAI is a provider of AI solutions that help businesses automate processes and make data-driven decisions.</div>
         </div>
-        <div class="feature">
-            <h3>Advanced Analytics</h3>
-            <p>Leverage data-driven insights to optimize performance and stay ahead of the competition.</p>
+        <div class="faq-item">
+            <div class="question">How can AI benefit my business?</div>
+            <div class="answer">AI can improve efficiency, reduce costs, enhance decision-making, and create innovative solutions for business problems.</div>
         </div>
-        <div class="feature">
-            <h3>Seamless Integration</h3>
-            <p>Integrate AI effortlessly into your existing workflows for maximum efficiency.</p>
-        </div>
-    </section>
-
-    <section id="contact" class="contact-page">
-        <h2>Contact Us</h2>
-        <div class="contact">
-            <div class="contact-card">
-                <h3>CEO</h3>
-                <p>Email: ceo@platai.com</p>
-                <p>Phone: +1-800-555-CEO1</p>
-            </div>
-            <div class="contact-card">
-                <h3>CBO (Chief Business Officer)</h3>
-                <p>Email: cbo@platai.com</p>
-                <p>Phone: +1-800-555-CBO2</p>
-            </div>
-            <div class="contact-card">
-                <h3>CMO (Chief Marketing Officer)</h3>
-                <p>Email: cmo@platai.com</p>
-                <p>Phone: +1-800-555-CMO3</p>
-            </div>
+        <div class="faq-item">
+            <div class="question">What industries do you serve?</div>
+            <div class="answer">We serve various industries including healthcare, finance, manufacturing, and retail, helping them leverage AI for growth.</div>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2024 PlatAI. All rights reserved. <a href="#">Privacy Policy</a></p>
+        <p>&copy; 2024 PlatAI | All Rights Reserved</p>
+        <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
     </footer>
+
+    <script>
+        const hamburger = document.getElementById('hamburger');
+        const mobileNav = document.getElementById('mobile-nav');
+        hamburger.addEventListener('click', () => {
+            mobileNav.classList.toggle('open');
+        });
+
+        // Accordion for FAQ
+        const faqItems = document.querySelectorAll('.faq-item');
+        faqItems.forEach(item => {
+            const question = item.querySelector('.question');
+            question.addEventListener('click', () => {
+                const answer = item.querySelector('.answer');
+                answer.style.display = answer.style.display === 'block' ? 'none' : 'block';
+            });
+        });
+    </script>
 </body>
 </html>
